--- a/FIRMWARE/BMSLV_2022.ioc
+++ b/FIRMWARE/BMSLV_2022.ioc
@@ -57,25 +57,28 @@ Dma.ADC2.1.SyncSignalID=NONE
 Dma.Request0=ADC1
 Dma.Request1=ADC2
 Dma.RequestsNb=2
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK
+FREERTOS.Tasks01=defaultTask,24,128,start_default_task,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;ltc_task,40,128,start_ltc_function,As external,NULL,Static,ltc_taskBuffer,ltc_taskControlBlock
+FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM6
-Mcu.IP11=TIM8
-Mcu.IP12=USB_DEVICE
-Mcu.IP13=USB_OTG_FS
+Mcu.IP10=TIM3
+Mcu.IP11=TIM6
+Mcu.IP12=TIM8
 Mcu.IP2=CAN1
 Mcu.IP3=DMA
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=RTC
-Mcu.IP7=SPI1
-Mcu.IP8=SYS
-Mcu.IP9=TIM3
-Mcu.IPNb=14
+Mcu.IP4=FREERTOS
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RTC
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=13
 Mcu.Name=STM32L4P5R(G-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN (PH0)
@@ -87,59 +90,58 @@ Mcu.Pin13=PC6
 Mcu.Pin14=PC7
 Mcu.Pin15=PC8
 Mcu.Pin16=PC9
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13 (JTMS/SWDIO)
+Mcu.Pin17=PA13 (JTMS/SWDIO)
+Mcu.Pin18=PA14 (JTCK/SWCLK)
+Mcu.Pin19=PA15 (JTDI)
 Mcu.Pin2=PA2
-Mcu.Pin20=PA14 (JTCK/SWCLK)
-Mcu.Pin21=PA15 (JTDI)
-Mcu.Pin22=PB3 (JTDO/TRACESWO)
-Mcu.Pin23=PB4 (NJTRST)
-Mcu.Pin24=PB5
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_RTC_VS_RTC_Activate
-Mcu.Pin28=VP_RTC_VS_RTC_Calendar
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PB3 (JTDO/TRACESWO)
+Mcu.Pin21=PB4 (NJTRST)
+Mcu.Pin22=PB5
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_RTC_VS_RTC_Calendar
+Mcu.Pin28=VP_SYS_VS_tim16
+Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA3
-Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin33=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-Mcu.PinsNb=34
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4P5RETx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
-NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA2_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.ADC1_2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.CAN1_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA11.Mode=Device_Only
-PA11.Signal=USB_OTG_FS_DM
-PA12.Mode=Device_Only
-PA12.Signal=USB_OTG_FS_DP
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
+NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TimeBase=TIM1_UP_TIM16_IRQn
+NVIC.TimeBaseIP=TIM16
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13\ (JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS/SWDIO).GPIO_Label=SW_DIO
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
@@ -250,7 +252,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -364,25 +366,19 @@ TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM8.IPParameters=Prescaler,Period
 TIM8.Period=49
 TIM8.Prescaler=95
-USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
-USB_DEVICE.VirtualMode=Cdc
-USB_DEVICE.VirtualModeFS=Cdc_FS
-USB_OTG_FS.IPParameters=VirtualMode
-USB_OTG_FS.VirtualMode=Device_Only
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim16.Mode=TIM16
+VP_SYS_VS_tim16.Signal=SYS_VS_tim16
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 isbadioc=false
