--- a/FIRMWARE/BMSLV_2022.ioc
+++ b/FIRMWARE/BMSLV_2022.ioc
@@ -15,7 +15,7 @@ ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 CAN1.BS1=CAN_BS1_13TQ
 CAN1.BS2=CAN_BS2_2TQ
 CAN1.CalculateBaudRate=1000000
-CAN1.CalculateTimeBit=1000.00
+CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=62.5
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS2,BS1,NART
 CAN1.NART=ENABLE
@@ -59,7 +59,7 @@ Dma.Request1=ADC2
 Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,128,start_default_task,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;ltc_task,40,128,start_ltc_function,As external,NULL,Static,ltc_taskBuffer,ltc_taskControlBlock
+FREERTOS.Tasks01=defaultTask,24,128,start_default_task,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;ltc_task,25,128,start_ltc_function,As external,NULL,Static,ltc_taskBuffer,ltc_taskControlBlock;soc_update_task,26,128,start_soc_function,As external,NULL,Static,soc_updateBuffer,soc_updateControlBlock;balance_task,27,128,start_balance_function,As external,NULL,Static,balance_taskBuffer,balance_taskControlBlock;comm_err_task,32,128,start_comm_function,As external,NULL,Static,communication_eBuffer,communication_eControlBlock
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -252,7 +252,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
