--- a/FIRMWARE/BMSLV_2022.ioc
+++ b/FIRMWARE/BMSLV_2022.ioc
@@ -85,35 +85,36 @@ Mcu.Pin0=PH0-OSC_IN (PH0)
 Mcu.Pin1=PH1-OSC_OUT (PH1)
 Mcu.Pin10=PB0
 Mcu.Pin11=PB1
-Mcu.Pin12=PB11
-Mcu.Pin13=PC6
-Mcu.Pin14=PC7
-Mcu.Pin15=PC8
-Mcu.Pin16=PC9
-Mcu.Pin17=PA13 (JTMS/SWDIO)
-Mcu.Pin18=PA14 (JTCK/SWCLK)
-Mcu.Pin19=PA15 (JTDI)
+Mcu.Pin12=PB2
+Mcu.Pin13=PB11
+Mcu.Pin14=PC6
+Mcu.Pin15=PC7
+Mcu.Pin16=PC8
+Mcu.Pin17=PC9
+Mcu.Pin18=PA13 (JTMS/SWDIO)
+Mcu.Pin19=PA14 (JTCK/SWCLK)
 Mcu.Pin2=PA2
-Mcu.Pin20=PB3 (JTDO/TRACESWO)
-Mcu.Pin21=PB4 (NJTRST)
-Mcu.Pin22=PB5
-Mcu.Pin23=PB8
-Mcu.Pin24=PB9
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_RTC_VS_RTC_Calendar
-Mcu.Pin28=VP_SYS_VS_tim16
-Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PA15 (JTDI)
+Mcu.Pin21=PB3 (JTDO/TRACESWO)
+Mcu.Pin22=PB4 (NJTRST)
+Mcu.Pin23=PB5
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin27=VP_RTC_VS_RTC_Activate
+Mcu.Pin28=VP_RTC_VS_RTC_Calendar
+Mcu.Pin29=VP_SYS_VS_tim16
 Mcu.Pin3=PA3
-Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-Mcu.PinsNb=32
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4P5RETx
@@ -192,6 +193,10 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=FUSE_VOLTAGE
 PB11.Locked=true
 PB11.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=INTERLOCK
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
