--- a/FIRMWARE/BMSLV_2022.ioc
+++ b/FIRMWARE/BMSLV_2022.ioc
@@ -1,13 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_16
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
@@ -70,6 +72,8 @@ Mcu.IP1=ADC2
 Mcu.IP10=TIM3
 Mcu.IP11=TIM6
 Mcu.IP12=TIM8
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=CAN1
 Mcu.IP3=DMA
 Mcu.IP4=FREERTOS
@@ -78,7 +82,7 @@ Mcu.IP6=RCC
 Mcu.IP7=RTC
 Mcu.IP8=SPI1
 Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IPNb=15
 Mcu.Name=STM32L4P5R(G-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN (PH0)
@@ -91,30 +95,33 @@ Mcu.Pin14=PC6
 Mcu.Pin15=PC7
 Mcu.Pin16=PC8
 Mcu.Pin17=PC9
-Mcu.Pin18=PA13 (JTMS/SWDIO)
-Mcu.Pin19=PA14 (JTCK/SWCLK)
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
 Mcu.Pin2=PA2
-Mcu.Pin20=PA15 (JTDI)
-Mcu.Pin21=PB3 (JTDO/TRACESWO)
-Mcu.Pin22=PB4 (NJTRST)
-Mcu.Pin23=PB5
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin27=VP_RTC_VS_RTC_Activate
-Mcu.Pin28=VP_RTC_VS_RTC_Calendar
-Mcu.Pin29=VP_SYS_VS_tim16
+Mcu.Pin20=PA13 (JTMS/SWDIO)
+Mcu.Pin21=PA14 (JTCK/SWCLK)
+Mcu.Pin22=PA15 (JTDI)
+Mcu.Pin23=PB3 (JTDO/TRACESWO)
+Mcu.Pin24=PB4 (NJTRST)
+Mcu.Pin25=PB5
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin29=VP_RTC_VS_RTC_Activate
 Mcu.Pin3=PA3
-Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin30=VP_RTC_VS_RTC_Calendar
+Mcu.Pin31=VP_SYS_VS_tim16
+Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin35=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-Mcu.PinsNb=33
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4P5RETx
@@ -130,6 +137,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
@@ -143,6 +151,10 @@ NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM16
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PA13\ (JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS/SWDIO).GPIO_Label=SW_DIO
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
@@ -270,7 +282,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
@@ -286,15 +298,15 @@ RCC.DFSDMFreq_Value=32000000
 RCC.FCLKCortexFreq_Value=64000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=64000000
-RCC.HSE_VALUE=24576000
+RCC.HSE_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=32000000
 RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
 RCC.I2C4Freq_Value=32000000
-RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2QoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
-RCC.LCDTFTFreq_Value=8000000
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLLM1,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2QoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LCDTFTFreq_Value=32000000
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPUART1Freq_Value=32000000
@@ -304,21 +316,23 @@ RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MSI_VALUE=4000000
 RCC.OCTOSPIMFreq_Value=64000000
-RCC.PLLN=32
+RCC.PLLM1=2
+RCC.PLLN=16
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
 RCC.PLLSAI1N=16
-RCC.PLLSAI1PoutputFreq_Value=32000000
-RCC.PLLSAI1QoutputFreq_Value=32000000
-RCC.PLLSAI1RoutputFreq_Value=32000000
-RCC.PLLSAI2PoutputFreq_Value=16000000
-RCC.PLLSAI2QoutputFreq_Value=16000000
-RCC.PLLSAI2RoutputFreq_Value=16000000
+RCC.PLLSAI1PoutputFreq_Value=128000000
+RCC.PLLSAI1QoutputFreq_Value=128000000
+RCC.PLLSAI1RoutputFreq_Value=128000000
+RCC.PLLSAI2PoutputFreq_Value=64000000
+RCC.PLLSAI2QoutputFreq_Value=64000000
+RCC.PLLSAI2RoutputFreq_Value=64000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=32000000
-RCC.SAI2Freq_Value=32000000
+RCC.SAI1Freq_Value=128000000
+RCC.SAI2Freq_Value=128000000
 RCC.SDMMCFreq_Value=64000000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -328,12 +342,12 @@ RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=32000000
 RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInput2Freq_Value=4000000
-RCC.VCOInput3Freq_Value=4000000
-RCC.VCOInputFreq_Value=4000000
+RCC.VCOInput2Freq_Value=16000000
+RCC.VCOInput3Freq_Value=16000000
+RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=128000000
-RCC.VCOSAI1OutputFreq_Value=64000000
-RCC.VCOSAI2OutputFreq_Value=32000000
+RCC.VCOSAI1OutputFreq_Value=256000000
+RCC.VCOSAI2OutputFreq_Value=128000000
 SH.ADCx_IN10.0=ADC1_IN10,IN10-Single-Ended
 SH.ADCx_IN10.ConfNb=1
 SH.ADCx_IN11.0=ADC1_IN11,IN11-Single-Ended
@@ -368,9 +382,17 @@ TIM6.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM6.Period=9
 TIM6.Prescaler=2399
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM8.IPParameters=Prescaler,Period
+TIM8.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2
 TIM8.Period=49
 TIM8.Prescaler=95
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM8.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
@@ -385,5 +407,7 @@ VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 isbadioc=false
