--- a/FIRMWARE/BMSLV_2022.ioc
+++ b/FIRMWARE/BMSLV_2022.ioc
@@ -9,7 +9,7 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_16
 ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
@@ -19,8 +19,7 @@ CAN1.BS2=CAN_BS2_2TQ
 CAN1.CalculateBaudRate=1000000
 CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=62.5
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS2,BS1,NART
-CAN1.NART=ENABLE
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS2,BS1
 CAN1.Prescaler=2
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.EventEnable=DISABLE
@@ -61,11 +60,12 @@ Dma.Request1=ADC2
 Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,128,start_default_task,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;ltc_task,25,128,start_ltc_function,As external,NULL,Static,ltc_taskBuffer,ltc_taskControlBlock;soc_update_task,26,128,start_soc_function,As external,NULL,Static,soc_updateBuffer,soc_updateControlBlock;balance_task,27,128,start_balance_function,As external,NULL,Static,balance_taskBuffer,balance_taskControlBlock;comm_err_task,32,128,start_comm_function,As external,NULL,Static,communication_eBuffer,communication_eControlBlock
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ltc_task,25,128,start_ltc_function,As external,NULL,Static,ltc_taskBuffer,ltc_taskControlBlock;soc_update_task,26,128,start_soc_function,As external,NULL,Static,soc_update_taskBuffer,soc_update_taskControlBlock;balance_task,27,128,start_balance_function,As external,NULL,Static,balance_taskBuffer,balance_taskControlBlock;comm_err_task,32,128,start_comm_err_function,As external,NULL,Static,comm_err_taskBuffer,comm_err_taskControlBlock
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+Mcu.CPN=STM32L4P5RET6
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
@@ -125,32 +125,32 @@ Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4P5RETx
-MxCube.Version=6.3.0
-MxDb.Version=DB.6.0.30
-NVIC.ADC1_2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.CAN1_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA2_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+MxCube.Version=6.5.0
+MxDb.Version=DB.6.0.50
+NVIC.ADC1_2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.CAN1_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Channel1_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
-NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:true
+NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM16
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -163,11 +163,9 @@ PA14\ (JTCK/SWCLK).GPIOParameters=GPIO_Label
 PA14\ (JTCK/SWCLK).GPIO_Label=SW_CLK
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
-PA15\ (JTDI).GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA15\ (JTDI).GPIOParameters=GPIO_Label
 PA15\ (JTDI).GPIO_Label=SPI1_CS
-PA15\ (JTDI).GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA15\ (JTDI).Locked=true
-PA15\ (JTDI).PinState=GPIO_PIN_RESET
 PA15\ (JTDI).Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=EFUSE
@@ -230,25 +228,21 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=THERM_7
 PC5.Locked=true
 PC5.Signal=ADCx_IN14
-PC6.GPIOParameters=PinState,GPIO_Label
+PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=LED_1
 PC6.Locked=true
-PC6.PinState=GPIO_PIN_SET
 PC6.Signal=GPIO_Output
-PC7.GPIOParameters=PinState,GPIO_Label
+PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=LED_2
 PC7.Locked=true
-PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
-PC8.GPIOParameters=PinState,GPIO_Label
+PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=LED_3
 PC8.Locked=true
-PC8.PinState=GPIO_PIN_SET
 PC8.Signal=GPIO_Output
-PC9.GPIOParameters=PinState,GPIO_Label
+PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=LED_4
 PC9.Locked=true
-PC9.PinState=GPIO_PIN_SET
 PC9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
@@ -264,7 +258,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L4P5RETx
-ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.17.1
+ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.17.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
