--- a/FIRMWARE/BMSLV_2022.ioc
+++ b/FIRMWARE/BMSLV_2022.ioc
@@ -1,25 +1,60 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_15
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,DMAContinuousRequests,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,NbrOfConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,ContinuousConvMode
+ADC1.NbrOfConversion=8
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-6\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-7\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-2\#ChannelRegularConversion=3
+ADC1.Rank-3\#ChannelRegularConversion=4
+ADC1.Rank-4\#ChannelRegularConversion=5
+ADC1.Rank-5\#ChannelRegularConversion=6
+ADC1.Rank-6\#ChannelRegularConversion=7
+ADC1.Rank-7\#ChannelRegularConversion=8
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
+ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_16
 ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.ContinuousConvMode=ENABLE
+ADC2.DMAContinuousRequests=ENABLE
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,DMAContinuousRequests,ContinuousConvMode,Offset-0\#ChannelRegularConversion
 ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Offset-0\#ChannelRegularConversion=0
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_1
 ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_247CYCLES_5
 CAN1.BS1=CAN_BS1_13TQ
 CAN1.BS2=CAN_BS2_2TQ
 CAN1.CalculateBaudRate=1000000
 CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=62.5
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS2,BS1
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS2,BS1,Mode
+CAN1.Mode=CAN_MODE_NORMAL
 CAN1.Prescaler=2
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.EventEnable=DISABLE
@@ -43,7 +78,7 @@ Dma.ADC2.1.EventEnable=DISABLE
 Dma.ADC2.1.Instance=DMA2_Channel1
 Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.1.Mode=DMA_NORMAL
+Dma.ADC2.1.Mode=DMA_CIRCULAR
 Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC2.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -59,9 +94,11 @@ Dma.Request0=ADC1
 Dma.Request1=ADC2
 Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ltc_task,25,128,start_ltc_function,As external,NULL,Static,ltc_taskBuffer,ltc_taskControlBlock;soc_update_task,26,128,start_soc_function,As external,NULL,Static,soc_update_taskBuffer,soc_update_taskControlBlock;balance_task,27,128,start_balance_function,As external,NULL,Static,balance_taskBuffer,balance_taskControlBlock;comm_err_task,32,128,start_comm_err_function,As external,NULL,Static,comm_err_taskBuffer,comm_err_taskControlBlock
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE
+FREERTOS.Tasks01=defaultTask,8,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ltc_task,24,512,start_ltc_function,As external,NULL,Static,ltc_taskBuffer,ltc_taskControlBlock;soc_update_task,16,512,start_soc_function,As external,NULL,Static,soc_update_taskBuffer,soc_update_taskControlBlock;balance_task,32,512,start_balance_function,As external,NULL,Static,balance_taskBuffer,balance_taskControlBlock;comm_err_task,40,512,start_comm_err_function,As external,NULL,Static,comm_err_taskBuffer,comm_err_taskControlBlock
 FREERTOS.configENABLE_FPU=1
+FREERTOS.configTOTAL_HEAP_SIZE=12000
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -163,13 +200,15 @@ PA14\ (JTCK/SWCLK).GPIOParameters=GPIO_Label
 PA14\ (JTCK/SWCLK).GPIO_Label=SW_CLK
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
-PA15\ (JTDI).GPIOParameters=GPIO_Label
+PA15\ (JTDI).GPIOParameters=PinState,GPIO_Label
 PA15\ (JTDI).GPIO_Label=SPI1_CS
 PA15\ (JTDI).Locked=true
+PA15\ (JTDI).PinState=GPIO_PIN_RESET
 PA15\ (JTDI).Signal=GPIO_Output
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=PinState,GPIO_Label
 PA2.GPIO_Label=EFUSE
 PA2.Locked=true
+PA2.PinState=GPIO_PIN_RESET
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=THERM_1
@@ -228,21 +267,29 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=THERM_7
 PC5.Locked=true
 PC5.Signal=ADCx_IN14
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PC6.GPIO_Label=LED_1
+PC6.GPIO_PuPd=GPIO_NOPULL
 PC6.Locked=true
+PC6.PinState=GPIO_PIN_SET
 PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Label
+PC7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PC7.GPIO_Label=LED_2
+PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.Locked=true
+PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
-PC8.GPIOParameters=GPIO_Label
+PC8.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PC8.GPIO_Label=LED_3
+PC8.GPIO_PuPd=GPIO_NOPULL
 PC8.Locked=true
+PC8.PinState=GPIO_PIN_SET
 PC8.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Label
+PC9.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PC9.GPIO_Label=LED_4
+PC9.GPIO_PuPd=GPIO_NOPULL
 PC9.Locked=true
+PC9.PinState=GPIO_PIN_SET
 PC9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
