Charging interlock logic fixed

--- a/FIRMWARE/BMSLV_2022.ioc
+++ b/FIRMWARE/BMSLV_2022.ioc
@@ -242,10 +242,11 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=FUSE_VOLTAGE
 PB11.Locked=true
 PB11.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB2.GPIO_Label=INTERLOCK
+PB2.GPIO_PuPd=GPIO_PULLUP
 PB2.Locked=true
-PB2.Signal=GPIO_Output
+PB2.Signal=GPIO_Input
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
